<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homework02.mad.homework02.AddExpenseActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addtitle"
        android:id="@+id/add"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/abc_primary_text_material_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/exp"
        android:id="@+id/exp"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expname"
        android:layout_gravity="center_horizontal"
        android:maxLength="50"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cat"
        android:id="@+id/cat"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/addspin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/category"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/amt"
        android:id="@+id/amt"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expamt"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date"
        android:id="@+id/date"
        android:textColor="@color/abc_primary_text_material_light"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/dateValue" />

        <ImageButton
            android:layout_width="52dp"
            android:layout_height="50dp"
            android:id="@+id/imageButtonDate"
            android:src="@drawable/date_image" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cam"
        android:id="@+id/cam"
        android:textColor="@color/abc_primary_text_material_light" />

        <ImageView
            android:layout_width="66dp"
            android:layout_height="64dp"
            android:id="@+id/imageView"
            android:src="@drawable/receipt_image" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expbut"
        android:id="@+id/expbutton"
        android:layout_gravity="center_horizontal" />

</LinearLayout>