<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.homework02.mad.homework02.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Expense"
        android:id="@+id/edit"
        android:layout_below="@+id/add"
        android:layout_marginTop="35dp"
        android:layout_alignRight="@+id/add"
        android:layout_alignEnd="@+id/add"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/delete"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/edit"
        android:layout_alignEnd="@+id/edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:id="@+id/show"
        android:layout_below="@+id/delete"
        android:layout_marginTop="32dp"
        android:layout_alignRight="@+id/delete"
        android:layout_alignEnd="@+id/delete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:id="@+id/finish"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:layout_alignRight="@+id/show"
        android:layout_alignEnd="@+id/show"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
